# python-functions-cloud-run-buildpacks

./: .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  build.sh  main.py  mypy.ini  project.toml  pylintrc  pyproject.toml
.github/workflows/: ci.yaml
python_functions_cloud_run_buildpacks/: example.py
tests/test_python_functions_cloud_run_buildpacks/: test_example.py
