[tool.poetry]
name = "python-functions-cloud-run-buildpacks"
version = "1.0.0"
description = ""
authors = ["Yurii Serhiichuk <savik.ne@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_functions_cloud_run_buildpacks" }]

[tool.poetry.dependencies]
python = "3.11.*"
Flask = "2.1.2"
werkzeug = "2.1.2"
functions-framework = "3.3.0"
single-source = "0.3.0"

[tool.poetry.dev-dependencies]
pytest = "7.3.1"
coverage = "7.2.5"
pytest-cov = "4.0.0"
black = "23.3.0"
mypy = "1.3.0"
pre-commit = "3.3.1"

[tool.black]
line-length = 98
target-version = ['py311']

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
markers = [
    "manual: marks tests that are intended to be run only manually and usually from local env. (deselect with '-m \"not manual\"')"
]

[tool.isort]
known_first_party = [
    "python_functions_cloud_run_buildpacks",
    "tests.python_functions_cloud_run_buildpacks",
]
